--- a/logger/build.gradle
+++ b/logger/build.gradle
@@ -1,5 +1,5 @@
 
-if(isRelease.toBoolean()){
+if(isModul.toBoolean()){
     apply plugin: 'com.android.library'
 }else{
     apply plugin: 'com.android.application'
@@ -10,9 +10,10 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        if(!isRelease.toBoolean()){
-            applicationId "kingwin.modul.basics"
+        if(!isModul.toBoolean()){
+            applicationId "kingwin.modul.logger"
         }
+
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
@@ -22,11 +23,10 @@ android {
     }
 
     sourceSets {
-        main {
-            // 独立调试与集成调试时使用不同的 AndroidManifest.xml 文件
-            if (isRelease.toBoolean()) {
-                manifest.srcFile 'src/main/moduleManifest/AndroidManifest.xml'
-            } else {
+        main{
+            if(isModul.toBoolean()){
+                manifest.srcFile 'src/main/modulManifest/AndroidManifest.xml'
+            }else{
                 manifest.srcFile 'src/main/AndroidManifest.xml'
             }
         }
@@ -49,8 +49,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':logger')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    api 'com.orhanobut:logger:2.2.0'
 }
